[package]
name = "vyc"
description = "vy language compiler."
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/azur1s/vy"
repository = "https://github.com/azur1s/vy"
license = "AGPL-3.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
structopt = "0.3.26"
