[package]
name = "hc"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
diagnostic = { path = "../diagnostic" }
hir = { path = "../hir" }
codegen = { path = "../codegen" }
chumsky = "0.8.0"
ariadne = "0.1.5"